# apple-news-to-sqlite

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  README_DEV.md  dodo.py  pyproject.toml
apple_news_to_sqlite/: __init__.py  __main__.py  cli.py  news.py  version.py
tests/: test_cli.py  test_news.py
tests/data/: reading-list
