[tool.poetry]
name = "apple-news-to-sqlite"
version = "0.1.0"
description = "Export \"Saved Stories\" from Apple News to SQLite"
authors = ["Rhet Turnbull <rturnbull+git@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "apple_news_to_sqlite"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlite-utils = "^3.30"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
